[package]
name = "aster-drm"
version = "0.1.0"
edition.workspace = true

[dependencies]
aster-time.workspace = true
bitflags.workspace = true
component.workspace = true
hashbrown.workspace = true
int-to-c-enum.workspace = true
log.workspace = true
ostd.workspace = true
ostd-pod.workspace = true
spin.workspace = true
zerocopy.workspace = true
aster-framebuffer.workspace = true

[lints]
workspace = true
