[package]
name = "aster-gpu"
version = "0.1.0"
edition.workspace = true

[dependencies]
component.workspace = true
log.workspace = true
ostd.workspace = true
spin.workspace = true
hashbrown.workspace = true
bitflags.workspace = true
int-to-c-enum.workspace = true
aster-time.workspace = true

[lints]
workspace = true
